[package]
name = "tiny-lru"
version = "0.1.0"
edition = "2024"
authors = ["Snehal Koukuntla <snehalreddyk@gmail.com>"]
description = "A Fast Small-then-Spill LRU cache"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/tiny-lru"
keywords = ["lru", "cache", "performance", "embedded", "hft"]
categories = ["data-structures", "caching"]

[features]
default = ["std"]
std = []

[dependencies]
tinyvec = { version = "1", features = ["alloc"] }
rustc-hash = "1.1"
likely_stable = "0.1"

[dev-dependencies]
criterion = "0.5"
lru = { path = "./lru-rs" }
const-lru = { path = "./const-lru" }
schnellru = { path = "./schnellru" }
uluru = { path = "./uluru" }

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "tiny_lru_bench"
harness = false

[[bench]]
name = "lru_rs_bench"
harness = false

[[bench]]
name = "const_lru_bench"
harness = false

[[bench]]
name = "schnellru_bench"
harness = false

[[bench]]
name = "uluru_bench"
harness = false

[[bench]]
name = "large_n_benchmarks"
harness = false

[[bench]]
name = "tiny_lru_large_bench"
harness = false

[[bench]]
name = "lru_rs_large_bench"
harness = false

[[bench]]
name = "schnellru_large_bench"
harness = false
