[package]
name = "tiny-lru"
version = "0.1.0"
edition = "2024"
authors = ["Snehal Koukuntla <snehalreddyk@gmail.com>"]
description = "A Fast Small-then-Spill LRU cache"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/tiny-lru"
keywords = ["lru", "cache", "performance", "embedded", "hft"]
categories = ["data-structures", "caching"]

[features]
default = ["std"]
std = []

[dependencies]
tinyvec = { version = "1", features = ["alloc"] }
rustc-hash = "2.1.1"
likely_stable = "0.1"

[dev-dependencies]
criterion = "0.7"
lru = "0.16.1"
const-lru = "1.0.0"
schnellru = "0.2.4"
uluru = "3.1.0"

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "tiny_lru_bench"
harness = false

[[bench]]
name = "lru_rs_bench"
harness = false

[[bench]]
name = "const_lru_bench"
harness = false

[[bench]]
name = "schnellru_bench"
harness = false

[[bench]]
name = "uluru_bench"
harness = false
